# play_glfw_cmake

./: CMakeLists.txt  README.md
include/: myCMath.h
